tests/agl/rejections/parse/bare_assignment.agl
var n: int = 1
n = 2
